# SimpleSecretsManager

./: .gitignore  README.md  pyproject.toml  setup.py
SimpleSecretsManager/: manager.py
simplesecretsmanager/: __init__.py  errors.py  manager.py  utility.py
