[tool.poetry]
name = "simplesecretsmanager"
version = "0.3"
description = "A simple secrets manager"
authors = ["Bartowski"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^41.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
