[tool.poetry]
name = "simplesecretsmanager"
version = "0.6"
description = "A simple secrets manager"
authors = ["Bartowski"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^41.0.3"
argon2-cffi = "^23.1.0"
bcrypt = "^4.0.1"
pydantic = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
